# discord_entities

./: .editorconfig  .gitignore  .replit  CUSTOM_LLM_CONFIG.md  ENTITY_INTERACTIONS.md  GHOST_INTERACTIONS.md  Makefile  README.md  env.example  pyproject.toml  requirements.txt  run_entities.py  run_ghosts.py
bots/: annabot.json  tomasbot.yaml
discord_entities/: bot.py  entity.py  entity_group.py  utils.py
entity_definitions/: Bloom-Soul.yaml  Still-Born.yaml  bs.yaml  sb.yaml
entity_definitions_examples/: dog.json
ghost_definitions/: annabot.json
ghost_definitions_examples/: example_custom_llm.json  example_custom_llm.yaml
ghosts/: bot.py  ghost.py  ghost_group.py  ghosts.py
